fix layout collapse at tag page.

--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -667,7 +667,7 @@ ul.tab {
   float: left;
   width: 800px;
   height: 32px;
-  margin: 20px 0px 0px 70px;
+  margin: 20px 0px 0px 30px;
   padding-left: 30px;
   padding-bottom: 38px;
   .sort-split-btn {
